--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core SerialPort Gui Quick REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core SerialPort Gui Quick REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Core SerialPort Gui Quick QuickControls2  REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core SerialPort Gui QuickControls2  Quick REQUIRED)
 
 set(PROJECT_SOURCES
         cardatareceiver.h
@@ -45,6 +45,7 @@ else()
         add_executable(AutoSpectra
           ${PROJECT_SOURCES}
           SpotifyReceiver.h SpotifyReceiver.cpp
+          can_bus.h can_bus.cpp
 
 
         )
@@ -57,7 +58,8 @@ target_link_libraries(AutoSpectra
     PRIVATE Qt${QT_VERSION_MAJOR}::Core
               Qt${QT_VERSION_MAJOR}::SerialPort
               Qt${QT_VERSION_MAJOR}::Gui
-              Qt${QT_VERSION_MAJOR}::Quick)
+              Qt${QT_VERSION_MAJOR}::Quick
+              Qt${QT_VERSION_MAJOR}::QuickControls2 )
 
 set_target_properties(AutoSpectra PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
