--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,10 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core SerialPort Gui Quick QuickControls2  REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core SerialPort Gui QuickControls2  Quick REQUIRED)
+find_package(QT NAMES Qt6 Qt5 COMPONENTS Core SerialPort Gui Quick QuickControls2  Network REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core SerialPort Gui QuickControls2  Quick Network REQUIRED)
 
 set(PROJECT_SOURCES
-        cardatareceiver.h
-        pythonrunner.h
-        serialmanager.h
-        cardatareceiver.cpp
-        pythonrunner.cpp
-        serialmanager.cpp
         main.cpp
         qml.qrc
 )
@@ -44,10 +38,12 @@ else()
     else()
         add_executable(AutoSpectra
           ${PROJECT_SOURCES}
+          cardatareceiver.h cardatareceiver.cpp
+          serialmanager.h serialmanager.cpp
+          pythonrunner.h pythonrunner.cpp
           SpotifyReceiver.h SpotifyReceiver.cpp
-
-
-
+          spotifyclient.h spotifyclient.cpp
+          fota.h fota.cpp
         )
     endif()
 endif()
@@ -56,10 +52,10 @@ target_compile_definitions(AutoSpectra
   PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(AutoSpectra
     PRIVATE Qt${QT_VERSION_MAJOR}::Core
-              Qt${QT_VERSION_MAJOR}::SerialPort
-              Qt${QT_VERSION_MAJOR}::Gui
-              Qt${QT_VERSION_MAJOR}::Quick
-              Qt${QT_VERSION_MAJOR}::QuickControls2 )
+            Qt${QT_VERSION_MAJOR}::SerialPort
+            Qt${QT_VERSION_MAJOR}::Gui
+            Qt${QT_VERSION_MAJOR}::Quick
+            Qt${QT_VERSION_MAJOR}::QuickControls2 )
 
 set_target_properties(AutoSpectra PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
